@@ -1,4 +1,4 @@
-INCLUDES = -I$(top_srcdir)/mark6sg -I$(srcdir)/..
+INCLUDES = -I$(top_srcdir)/mark6sg -I$(top_srcdir)
 LDADD = $(top_builddir)/mark6sg/libmark6sg.la -lm
 
 bin_PROGRAMS = m6sg_test1
